--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,12 @@
 
 buildscript {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath('com.android.tools.build:gradle:7.0.4')
     }
 }
 
