Updating build.gradle to support build

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,6 +33,6 @@ repositories {
 
 dependencies {
      implementation fileTree(dir: '../IntuneSDK/android/libs', include: ['*.jar'])
-     implementation project(':ReactAndroid')
+     implementation ":ReactAndroid"
 }
   
