--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,12 +13,12 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 31
+    buildToolsVersion "31.0.0"
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 22
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
     }
@@ -33,6 +33,6 @@ repositories {
 
 dependencies {
      implementation fileTree(dir: '../IntuneSDK/android/libs', include: ['*.jar'])
-     implementation ":ReactAndroid"
+     implementation project(':ReactAndroid')
 }
   
