--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Durgaprasad-Budhwani/react-native-ms-intune-mam.git"
+    "url": "git+https://github.com/deep0410/react-native-ms-intune-mam.git "
   },
-  "author": "Durgaprasad Budhwani",
+  "author": "Deep Patel",
   "license": "MIT",
   "peerDependencies": {
     "react-native": "^0.47.0"
