--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,11 @@ android {
     lintOptions {
         abortOnError false
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+    ndkVersion '21.4.7075529'
 }
 
 repositories {
