--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
     "url": "git+https://github.com/deep0410/react-native-ms-intune-mam.git "
   },
   "author": "Deep Patel",
-  "license": "MIT",
-  "peerDependencies": {
-    "react-native": "0.68.2"
-  }
+  "license": "MIT"
 }
