--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,5 +38,5 @@ repositories {
 
 dependencies {
      implementation fileTree(dir: '../IntuneSDK/android/libs', include: ['*.jar'])
+     implementation project(':ReactAndroid')
 }
-  
