--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "url": "git+https://github.com/deep0410/react-native-ms-intune-mam.git "
   },
   "author": "Deep Patel",
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  }
 }
