--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,5 +39,6 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: '../IntuneSDK/android/libs', include: ['*.jar'])
+    implementation (':ReactAndroid')
     implementation ('com.microsoft.identity.client:msal:2.2.3')
 }
