Full rework for native code

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "author": "Deep Patel",
   "license": "MIT",
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react-native": "^0.63.2"
   }
 }
