--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,12 +32,18 @@ android {
     ndkVersion '21.4.7075529'
 }
 
-repositories {
-    mavenCentral()
-    google()
+allprojects {
+    repositories {
+        mavenLocal()
+        jcenter()
+        maven { url "$rootDir/../node_modules/react-native/android" }
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: '../IntuneSDK/android/libs', include: ['*.jar'])
-    implementation ":ReactAndroid"  // From node_modules
+    implementation "com.facebook.soloader:soloader:0.10.4+"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
