Full rework for native code

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,9 +36,26 @@ allprojects {
     repositories {
         mavenLocal()
         jcenter()
-        maven { url "$rootDir/../node_modules/react-native/android" }
-        maven { url "https://jitpack.io" }
-        maven { url "https://maven.google.com" }
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url(new File(['node', '--print', "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), '../android'))
+        }
+        maven {
+            // Android JSC is installed from npm
+            url(new File(['node', '--print', "require.resolve('jsc-android/package.json')"].execute(null, rootDir).text.trim(), '../dist'))
+        }
+        maven {
+            url "https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed/maven/v1"
+        }
+         google()
+        mavenCentral {
+            // We don't want to fetch react-native from Maven Central as there are
+            // older versions over there.
+            content {
+                excludeGroup 'com.facebook.react'
+            }
+        }
+        maven { url 'https://www.jitpack.io' }
     }
 }
 
