--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,9 +44,7 @@ allprojects {
             // Android JSC is installed from npm
             url(new File(['node', '--print', "require.resolve('jsc-android/package.json')"].execute(null, rootDir).text.trim(), '../dist'))
         }
-        maven {
-            url "https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed/maven/v1"
-        }
+        
          google()
         mavenCentral {
             // We don't want to fetch react-native from Maven Central as there are
@@ -63,4 +61,8 @@ dependencies {
     implementation fileTree(dir: '../IntuneSDK/android/libs', include: ['*.jar'])
     implementation "com.facebook.soloader:soloader:0.10.4+"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    // Include the MAM SDK
+    implementation files('../IntuneSDK/android/libs/Microsoft.Intune.MAM.SDK.jar')
+    // Include MSAL
+    implementation 'com.microsoft.identity.client:msal:2.0.8'
 }
