--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,7 +44,11 @@ allprojects {
             // Android JSC is installed from npm
             url(new File(['node', '--print', "require.resolve('jsc-android/package.json')"].execute(null, rootDir).text.trim(), '../dist'))
         }
-        
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url("$rootDir/../node_modules/react-native/android")
+        }
+
          google()
         mavenCentral {
             // We don't want to fetch react-native from Maven Central as there are
