--- a/android/build.gradle
+++ b/android/build.gradle
@@ -64,6 +64,7 @@ allprojects {
 dependencies {
     implementation fileTree(dir: '../IntuneSDK/android/libs', include: ['*.jar'])
     implementation "com.facebook.soloader:soloader:0.10.4+"
+    implementation "com.facebook.react:react-native:0.68.2"  // From node_modules
     // Include the MAM SDK
     implementation files('../IntuneSDK/android/libs/Microsoft.Intune.MAM.SDK.jar')
     // Include MSAL
