--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,13 +13,11 @@ buildscript {
         classpath files("libs/com.microsoft.intune.mam.build.jar")
         // Cordova users: add this line instead
         // classpath files("./app/src/main/libs/com.microsoft.intune.mam.build.jar")
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 apply plugin: 'com.android.library'
-apply plugin: "com.microsoft.intune.mam"
+// apply plugin: 'com.microsoft.intune.mam'
 
 android {
     compileSdkVersion 31
@@ -56,6 +54,13 @@ allprojects {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
+        }
+        google()
+        jcenter()
+        maven {
+            // ADD THESE TWO LINES:
+            url 'https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed/maven/v1'
+            name 'Duo-SDK-Feed'
         }
 
         google()
