--- a/android/build.gradle
+++ b/android/build.gradle
@@ -76,7 +76,7 @@ allprojects {
 }
 
 dependencies {
-    implementation fileTree(dir: '../IntuneSDK/android/libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.facebook.soloader:soloader:0.10.4+"
     implementation 'com.microsoft.identity.client:msal:2.2.3'
     implementation "com.facebook.react:react-native:0.68.2"  // From node_modules
