--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "react-native-ms-intune-mam",
-  "version": "1.3.4",
+  "version": "1.3.6.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/deep0410/react-native-ms-intune-mam.git "
+    "url": "git+https://github.com/deep0410/react-native-ms-intune-mam.git#1.3.6.1"
   },
   "author": "Deep Patel",
   "license": "MIT",
